fixed pause border not showing

--- a/public/css/timedex.css
+++ b/public/css/timedex.css
@@ -104,6 +104,6 @@ button {
 }
 
 .pauseInterval {
-    border-color: red;  
-    border-width: 5px;
+    border-color: red  !important;
+    border-width: 5px !important;
 }
